--- a/requirements.txt
+++ b/requirements.txt
@@ -1,166 +1,131 @@
-alpaca-trade-api==1.2.3
-anyio @ file:///C:/ci/anyio_1620153418380/work/dist
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1618968359944/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
-bokeh @ file:///C:/ci/bokeh_1625767608701/work
-Bottleneck==1.3.2
-Brotli==1.0.9
-brotlipy==0.7.0
-certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1625831749120/work
-chardet @ file:///C:/ci/chardet_1607690654534/work
-click @ file:///tmp/build/80754af9/click_1621604852318/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-colorcet @ file:///tmp/build/80754af9/colorcet_1611168489822/work
-cryptography @ file:///C:/ci/cryptography_1616769344312/work
-cycler==0.10.0
-dash==1.21.0
-dash-core-components==1.17.1
-dash-html-components==1.1.4
-dash-table==4.12.0
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints==0.3
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1627776530240/work
-Faker @ file:///tmp/build/80754af9/faker_1624291529673/work
-fire @ file:///home/conda/feedstock_root/build_artifacts/fire_1611345183397/work
-Flask==2.0.1
-Flask-Compress==1.10.1
-fonttools==4.25.0
-future==0.18.2
-geographiclib @ file:///home/conda/feedstock_root/build_artifacts/geographiclib_1624386157733/work
-geopy @ file:///home/conda/feedstock_root/build_artifacts/geopy_1626114677070/work
-greenlet @ file:///C:/ci/greenlet_1620913825737/work
-HeapDict==1.0.1
-holoviews @ file:///tmp/build/80754af9/holoviews_1627946342145/work
-hvplot @ file:///tmp/build/80754af9/hvplot_1627305124151/work
-icecream @ file:///home/conda/feedstock_root/build_artifacts/icecream_1624442595266/work
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877484576/work
-inflection==0.5.1
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1628244008373/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-isort==5.9.2
-itsdangerous==2.0.1
-jedi @ file:///C:/ci/jedi_1611315808330/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter==1.0.0
-jupyter-bokeh==2.0.4
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyter-flex @ file:///home/conda/feedstock_root/build_artifacts/jupyter-flex_1628778350609/work
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.6
-jupyter-nbextensions-configurator==0.4.1
-jupyter-server @ file:///C:/ci/jupyter_server_1616084298403/work
-jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1628249831644/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1628194263495/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-jupyterthemes==0.20.0
-kiwisolver @ file:///C:/ci/kiwisolver_1612282606037/work
-lesscpy @ file:///home/conda/feedstock_root/build_artifacts/lesscpy_1626335962205/work
-lxml==4.6.3
-Markdown @ file:///C:/ci/markdown_1614364121613/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528314575/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1628011511716/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random @ file:///C:/ci/mkl_random_1626186184278/work
-mkl-service==2.4.0
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1622818384463/work
-msgpack==1.0.2
-munkres==1.1.4
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1624479163777/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx @ file:///tmp/build/80754af9/networkx_1627459939258/work
-notebook @ file:///C:/ci/notebook_1628516406404/work
-numexpr @ file:///C:/ci/numexpr_1618856738664/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1626271903025/work
-olefile==0.46
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
-pandas @ file:///C:/ci/pandas_1627570330330/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-panel @ file:///tmp/build/80754af9/panel_1628797728722/work
-param @ file:///tmp/build/80754af9/param_1625476559719/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/ci/pillow_1625663293593/work
-plotly @ file:///tmp/build/80754af9/plotly_1626182254919/work
-pluggy @ file:///C:/ci/pluggy_1615976358795/work
-ply==3.11
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyct @ file:///C:/ci/pyct_1600458386426/work
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-pytest==6.2.4
-python-coinmarketcap==0.2
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-dotenv @ file:///home/conda/feedstock_root/build_artifacts/python-dotenv_1627149776321/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pyviz-comms @ file:///tmp/build/80754af9/pyviz_comms_1623747165329/work
-pywin32==228
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq @ file:///C:/ci/pyzmq_1628276144921/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1623278325812/work
-QtPy==1.9.0
-Quandl @ file:///C:/ci/quandl_1614799182810/work
-questionary @ file:///home/conda/feedstock_root/build_artifacts/questionary_1626352221002/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-scipy @ file:///C:/ci/scipy_1618856128765/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-sip==4.19.13
-six @ file:///C:/ci/six_1605187374963/work
-sniffio @ file:///C:/ci/sniffio_1614030707456/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1626948551817/work
-streamz @ file:///tmp/build/80754af9/streamz_1610739558934/work
-tenacity @ file:///C:/ci/tenacity_1625815805040/work
-termcolor==1.1.0
-terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-text-unidecode==1.3
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-tornado @ file:///C:/ci/tornado_1606942392901/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1627710282869/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
-ujson @ file:///C:/ci/ujson_1611241570789/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-voila @ file:///home/conda/feedstock_root/build_artifacts/voila_1619627528276/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-websocket-client==1.1.0
-websockets==9.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-wincertstore==0.2
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
+# packages in environment at E:\Anaconda3\envs\test_env:
+#
+# Name                    Version                   Build  Channel
+argon2-cffi               20.1.0           py38h2bbff1b_1  
+async_generator           1.10               pyhd3eb1b0_0  
+attrs                     21.2.0             pyhd3eb1b0_0  
+backcall                  0.2.0              pyhd3eb1b0_0  
+blas                      1.0                         mkl  
+bleach                    4.0.0              pyhd3eb1b0_0  
+bokeh                     2.3.3            py38haa95532_0  
+bottleneck                1.3.2            py38h2a96729_1  
+brotli                    1.0.9                ha925a31_2  
+brotlipy                  0.7.0           py38h2bbff1b_1003  
+ca-certificates           2021.7.5             haa95532_1  
+certifi                   2021.5.30        py38haa95532_0  
+cffi                      1.14.6           py38h2bbff1b_0  
+charset-normalizer        2.0.4              pyhd3eb1b0_0  
+colorama                  0.4.4              pyhd3eb1b0_0  
+colorcet                  2.0.6              pyhd3eb1b0_0  
+cryptography              3.4.7            py38h71e12ea_0  
+cycler                    0.10.0                   py38_0  
+debugpy                   1.4.1            py38hd77b12b_0  
+decorator                 5.0.9              pyhd3eb1b0_0  
+defusedxml                0.7.1              pyhd3eb1b0_0  
+entrypoints               0.3                      py38_0  
+fonttools                 4.25.0             pyhd3eb1b0_0  
+freetype                  2.10.4               hd328e21_0  
+holoviews                 1.14.5             pyhd3eb1b0_1  
+hvplot                    0.7.3                      py_0    pyviz
+idna                      3.2                pyhd3eb1b0_0  
+importlib-metadata        3.10.0           py38haa95532_0  
+importlib_metadata        3.10.0               hd3eb1b0_0  
+intel-openmp              2021.3.0          haa95532_3372  
+ipykernel                 6.2.0            py38haa95532_1  
+ipython                   7.26.0           py38hd4e2768_0  
+ipython_genutils          0.2.0              pyhd3eb1b0_1  
+jedi                      0.18.0           py38haa95532_1  
+jinja2                    3.0.1              pyhd3eb1b0_0  
+joblib                    1.0.1                    pypi_0    pypi
+jpeg                      9b                   hb83a4c4_2  
+jsonschema                3.2.0                      py_2  
+jupyter_client            6.1.12             pyhd3eb1b0_0  
+jupyter_core              4.7.1            py38haa95532_0  
+jupyterlab_pygments       0.1.2                      py_0  
+kiwisolver                1.3.1            py38hd77b12b_0  
+libpng                    1.6.37               h2a8f88b_0  
+libtiff                   4.2.0                hd0e1b90_0  
+lz4-c                     1.9.3                h2bbff1b_1  
+m2w64-gcc-libgfortran     5.3.0                         6  
+m2w64-gcc-libs            5.3.0                         7  
+m2w64-gcc-libs-core       5.3.0                         7  
+m2w64-gmp                 6.1.0                         2  
+m2w64-libwinpthread-git   5.0.0.4634.697f757               2  
+markdown                  3.3.4            py38haa95532_0  
+markupsafe                2.0.1            py38h2bbff1b_0  
+matplotlib-base           3.4.2            py38h49ac443_0  
+matplotlib-inline         0.1.2              pyhd3eb1b0_2  
+mistune                   0.8.4           py38he774522_1000  
+mkl                       2021.3.0           haa95532_524  
+mkl-service               2.4.0            py38h2bbff1b_0  
+mkl_fft                   1.3.0            py38h277e83a_2  
+mkl_random                1.2.2            py38hf11a4ad_0  
+msys2-conda-epoch         20160418                      1  
+munkres                   1.1.4                      py_0  
+nb_conda_kernels          2.3.1            py38haa244fe_0    conda-forge
+nbclient                  0.5.3              pyhd3eb1b0_0  
+nbconvert                 6.1.0            py38haa95532_0  
+nbformat                  5.1.3              pyhd3eb1b0_0  
+nest-asyncio              1.5.1              pyhd3eb1b0_0  
+notebook                  6.4.3              pyha770c72_0    conda-forge
+numexpr                   2.7.3            py38hb80d3ca_1  
+numpy                     1.20.3           py38ha4e8547_0  
+numpy-base                1.20.3           py38hc2deb75_0  
+olefile                   0.46                       py_0  
+openssl                   1.1.1l               h2bbff1b_0  
+packaging                 21.0               pyhd3eb1b0_0  
+pandas                    1.3.2            py38h6214cd6_0  
+pandocfilters             1.4.3            py38haa95532_1  
+panel                     0.12.1             pyhd3eb1b0_0  
+param                     1.11.1             pyhd3eb1b0_0  
+parso                     0.8.2              pyhd3eb1b0_0  
+pickleshare               0.7.5           pyhd3eb1b0_1003  
+pillow                    8.3.1            py38h4fa10fc_0  
+pip                       21.2.2           py38haa95532_0  
+prometheus_client         0.11.0             pyhd3eb1b0_0  
+prompt-toolkit            3.0.17             pyh06a4308_0  
+pycparser                 2.20                       py_2  
+pyct                      0.4.8                    py38_0  
+pygments                  2.10.0             pyhd3eb1b0_0  
+pyopenssl                 20.0.1             pyhd3eb1b0_1  
+pyparsing                 2.4.7              pyhd3eb1b0_0  
+pyrsistent                0.17.3           py38he774522_0  
+pysocks                   1.7.1            py38haa95532_0  
+python                    3.8.11               h6244533_1  
+python-dateutil           2.8.2              pyhd3eb1b0_0  
+python_abi                3.8                      2_cp38    conda-forge
+pytz                      2021.1             pyhd3eb1b0_0  
+pyviz_comms               2.0.2              pyhd3eb1b0_0  
+pywin32                   228              py38hbaba5e8_1  
+pywinpty                  0.5.7                    py38_0  
+pyyaml                    5.4.1            py38h2bbff1b_1  
+pyzmq                     22.2.1           py38hd77b12b_1  
+requests                  2.26.0             pyhd3eb1b0_0  
+scikit-learn              0.24.2                   pypi_0    pypi
+scipy                     1.7.1                    pypi_0    pypi
+send2trash                1.5.0              pyhd3eb1b0_1  
+setuptools                52.0.0           py38haa95532_0  
+six                       1.16.0             pyhd3eb1b0_0  
+sqlite                    3.36.0               h2bbff1b_0  
+terminado                 0.9.4            py38haa95532_0  
+testpath                  0.5.0              pyhd3eb1b0_0  
+threadpoolctl             2.2.0                    pypi_0    pypi
+tk                        8.6.10               he774522_0  
+tornado                   6.1              py38h2bbff1b_0  
+tqdm                      4.62.1             pyhd3eb1b0_1  
+traitlets                 5.0.5              pyhd3eb1b0_0  
+typing_extensions         3.10.0.0           pyh06a4308_0  
+urllib3                   1.26.6             pyhd3eb1b0_1  
+vc                        14.2                 h21ff451_1  
+vs2015_runtime            14.27.29016          h5e58377_2  
+wcwidth                   0.2.5                      py_0  
+webencodings              0.5.1                    py38_1  
+wheel                     0.37.0             pyhd3eb1b0_0  
+win_inet_pton             1.1.0            py38haa95532_0  
+wincertstore              0.2                      py38_0  
+winpty                    0.4.3                         4  
+xz                        5.2.5                h62dcd97_0  
+yaml                      0.2.5                he774522_0  
+zipp                      3.5.0              pyhd3eb1b0_0  
+zlib                      1.2.11               h62dcd97_4  
+zstd                      1.4.9                h19a0ad4_0  
